# ADHDPomodoro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
.github/: copilot-instructions.md
src/: CLISettings.cpp  CLISettings.h  Settings.cpp  Settings.h  cli_main.cpp  main.cpp
